--- a/html/contact.html
+++ b/html/contact.html
@@ -65,10 +65,27 @@
             </div>
         </header>
         <main>
+            <section class="section-main">
+                <h1 class="contactUs">Contact Us</h1>
+                <div class="inputContainer">
+                    <div class="inputIn">
+                        <input class="fullName text" type="text" placeholder="Full Name">
+                        <input class="email text" type="text" placeholder="Email">
+                    </div>
+
+                    <div class="inputIn">
+                        <input class="adress text" type="text" placeholder="Adress">
+                        <input class="phone text" type="text" placeholder="Phone">
+                    </div>
+
+                    <div class="inputBottom">
+                        <textarea class="note" name="" id="" cols="30" rows="10" placeholder="Note"></textarea>
+                    </div>
+                </div>
+                <div class="buttonMain"><button class="sendButton">Send</button></div>
+                
+            </section>
             <!-- Elave kod bura daxil olsun -->
-
-
-
 
             <section class="follow">
                 <div class="follow__container">
